<resources>
    <string name="made_with_love" translatable="false">Made with \u2764 by Thomas Künneth</string>
    <string name="not_successful">%1$s was not successful.</string>
    <string name="contacts">Contacts</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="four_strings_two_lines" translatable="false">%1$s %2$s (%3$s %4$s)</string>
    <string name="template_string_string" translatable="false">%1$s %2$s</string>
    <string name="tag_module_selection" translatable="false">module_selection</string>
    <string name="tag_module_fragment" translatable="false">moduleFragment</string>
    <string name="leap_year">Leap Year</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="app_name" translatable="false">TKWeek</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="today">Today</string>
    <string name="goto_date">Goto date</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="in_x_days">%1$d days</string>
    <string name="x_days_ago">%1$d days ago</string>
    <string name="pick">Pick</string>
    <string name="number_0" translatable="false">0</string>
    <string name="dialog_title_error">An error occurred</string>
    <string name="menu_delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="unknown">unknown</string>
    <string name="loading_data">loading data</string>
    <string name="main">Main Activity</string>
    <string name="infinity" translatable="false">\u221e</string>
    <string name="string1_string2" translatable="false">%1$s (%2$s)</string>
    <string name="begin">First day of %1$s</string>
    <string name="end">Last day of %1$s</string>
    <string name="day_x_of_y">Day %1$d of %2$d %3$s</string>
    <string name="string1_dash_string2" translatable="false">%1$s - %2$s</string>
    <string name="previous_leap_year">Previous Leap Year</string>
    <string name="next_leap_year">Next Leap Year</string>
    <string name="int_slash_int" translatable="false">%1$d / %2$d</string>
    <string name="action_could_not_be_completed">The action could not be completed.</string>
    <string name="dpi" translatable="false">dpi</string>
    <string name="times_symbol" translatable="false">\ud7</string>
    <string name="pixel">pixel</string>
    <string name="dp" translatable="false">dp</string>
    <string name="none">none</string>
    <string name="sigma" translatable="false">\u3A3</string>
    <string name="spring">First Day of Spring</string>
    <string name="summer">First Day of Summer</string>
    <string name="autumn">First Day of Autumn</string>
    <string name="winter">First Day of Winter</string>
    <string name="hide">Hide</string>
    <string name="grant">Grant</string>
    <string name="close">Close</string>
    <string name="notes">Notes</string>
    <string name="edit">Edit</string>
    <string name="saved">%1$s saved</string>
    <string name="widget_retired">This TKWeek widget is no longer supported. Please remove.</string>
    <string name="number_of_events">%1$d events</string>
    <string name="year">year</string>
    <string name="next_year">Next year</string>
    <string name="previous_year">Previous year</string>
    <string name="new_moon">New Moon</string>
    <string name="first_quarter">First Quarter</string>
    <string name="full_moon">Full Moon</string>
    <string name="last_quarter">Last Quarter</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpius">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricornus">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="mamertus" translatable="false">Mamertus</string>
    <string name="pankratius" translatable="false">Pankratius</string>
    <string name="servatius" translatable="false">Servatius</string>
    <string name="bonifatius" translatable="false">Bonifatius</string>
    <string name="sophie" translatable="false">Sophie</string>
    <string name="week_activity_text1">Convert date and week</string>
    <string name="week_activity_text2">Find the week number of a date or vice versa</string>
    <string name="days_between_dates_activity_text1">Days between dates</string>
    <string name="days_between_dates_activity_text2">Number of days between two dates</string>
    <string name="date_calculator_activity_text1">Date calculator</string>
    <string name="date_calculator_activity_text2">Add or subtract days, weeks, …</string>
    <string name="annual_events_activity_text1">Events</string>
    <string name="annual_events_activity_text2">Display and maintain events</string>
    <string name="about_a_year_activity_text1">Information about a year</string>
    <string name="about_a_year_activity_text2">Leap year, Friday the 13th, …</string>
    <string name="about_activity_text1">About TKWeek</string>
    <string name="about_activity_text2">Some information about this app and the system</string>
    <string name="calendar_activity_text1">Calendar</string>
    <string name="calendar_activity_text2">A simple calendar</string>
    <string name="myday_activity_text1">My day</string>
    <string name="myday_activity_text2">Events, appointments, tasks and more</string>
    <string name="str_permission_read_calendar">TKWeek would like to
access your calendar data to display events and appointments. You can deactivate this in Settings</string>
    <string name="str_permission_read_calendar2">TKWeek would like to
access your calendar data to display all-day events. You can deactivate this in Settings</string>
    <string name="str_permission_read_contacts">TKWeek would like to
access your contacts data to display birthdays and anniversaries. You can deactivate this in Settings</string>
    <string name="str_permission_post_notifications">TKWeek would like to post notifications once a day.</string>
    <string name="pick_fathersday">Pick Father’s Day date</string>
    <string name="week_activity_hide_allday_events">Hide Android calendar all-day events</string>
    <string name="week_activity_iso_week_title">ISO week numbers</string>
    <string name="week_activity_iso_week_summary">Calculate week numbers according to the ISO 8601 date and time standard</string>
    <string name="pick_churches">Pick Churches</string>
    <string name="week_activity_hide_builtins_title">Hide builtin events</string>
    <string name="pick_thanksgiving">Pick Thanksgiving date</string>
    <string name="national_holidays">National Holidays</string>
    <string name="show_national_holidays">Pick countries</string>
    <string name="misc_category">Miscellaneous</string>
    <string name="business_days_title">Business days</string>
    <string name="business_days_summary">Official working days of the week</string>
    <string name="business_days_dialog_title">Select business days</string>
    <string name="week_activity_hide_birthdays">Hide birthdays and anniversaries</string>
    <string name="recent_events_title">Recent Events</string>
    <string name="recent_events_summary">Days displayed at top of events list</string>
    <string name="widget_appearance">Widget appearance</string>
    <string name="hide_seasons">Hide seasons</string>
    <string name="hide_astrological_sign">Hide Sign of the Zodiac</string>
    <string name="third_sunday_of_june">Third Sunday of June</string>
    <string name="first_sunday_of_september">First Sunday of September</string>
    <string name="set_alarm">Show upcoming events as notifications</string>
    <string name="set_alarm_description">Configure notification delivery</string>
    <string name="show_moon_phases">Show Moon phases</string>
    <string name="myday_activity_hide_appointments">Hide appointments</string>
    <string name="wochenanfang">First day of week</string>
    <string name="samstag">Saturday</string>
    <string name="sonntag">Sunday</string>
    <string name="montag">Monday</string>
    <string name="standard">default</string>
    <string name="date_within_week">Date within week</string>
    <string name="week_number">Week number</string>
    <string name="week_number_iso">ISO week number</string>
    <string name="first_and_last_day_of_week" translatable="false">%1$s %2$s - %3$s %4$s</string>
    <string name="week_calculation_message">You can change how the week number is calculated in Settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="about_a_year_label1">Friday the 13th</string>
    <string name="about_a_year_weekday_distribution">Weekday distribution</string>
    <string name="daylight_savings">daylight savings</string>
    <string name="seasons">Seasons</string>
    <string name="no_daylight_savings">No daylight savings</string>
    <string name="day_of_week">Day of week:</string>
    <string name="label_day_of_year">Day of year:</string>
    <string name="day_of_year">%1$d of %2$d (%3$d left)</string>
    <string name="is_leap_year">Leap year:</string>
    <string name="astrological_sign">Sign of the Zodiac:</string>
    <string name="look_up_in_wikipedia">Look up in Wikipedia</string>
    <string name="first_date">Start date</string>
    <string name="second_date">End date</string>
    <string name="days_from_to">Days (business days) between %1$s and %2$s</string>
    <string name="days_between_dates_weekends">%1$d weekend(s)</string>
    <string name="days_between_dates_weeks">approx. %1$d week(s)</string>
    <string name="days_between_dates_month_turns">%1$d month turns</string>
    <string name="days_between_dates_year_turns">%1$d year turns</string>
    <string name="include_first_date">Include first day</string>
    <string name="days_between_dates_days">%1$d day(s)</string>
    <string name="days_between_dates_business_days">%1$d business day(s)</string>
    <string name="less_than_a_week">less than a week</string>
    <string name="hint_today_start">Set start date to today</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="add" translatable="false">+</string>
    <string name="subtract" translatable="false">-</string>
    <string name="clear">Clear</string>
    <string name="reuse_result">Set result as new date</string>
    <string name="count_business_days_only">Only count business days</string>
    <string name="fathersday">Father’s Day</string>
    <string name="ostersonntag">Easter Sunday</string>
    <string name="events_list_widget_text1l">Full Moon</string>
    <string name="events_list_widget_text1r">4 days ago</string>
    <string name="events_list_widget_text2l">Flag Day (\u221E)</string>
    <string name="events_list_widget_text2r">Yesterday</string>
    <string name="events_list_widget_text3l">Bloomsday (\u221E)</string>
    <string name="events_list_widget_text3r">Tomorrow</string>
    <string name="events_list_widget_text4l">Last Querter</string>
    <string name="events_list_widget_text4r">3 days</string>
    <string name="text1">week number 24 of 52</string>
    <string name="text2">Jun 8, 2025 - Jun 14, 2025</string>
    <string name="text3">Saturday, June 14, 2025</string>
    <string name="date_widget_text1">Jun</string>
    <string name="date_widget_text2" translatable="false">15</string>
    <string name="date_widget_text3">Sun</string>
    <string name="load_all_user_events">Load all user events</string>
    <string name="thanksgiving">Thanksgiving</string>
    <string name="avoid_hinge">Avoid hinge</string>
</resources>