<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/date_widget_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryContainer"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    android:theme="@style/TKWeekWidgetTheme"
    android:weightSum="3">

    <TextView
        android:id="@+id/text_month"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="1"
        android:paddingVertical="2dp"
        android:text="@string/date_widget_text1"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?attr/colorSecondary"
        tools:targetApi="26" />

    <TextView
        android:id="@+id/text_day"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="1"
        android:paddingVertical="2dp"
        android:text="@string/date_widget_text2"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="?attr/colorPrimary"
        android:textFontWeight="600"
        tools:targetApi="28" />

    <TextView
        android:id="@+id/text_weekday"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="1"
        android:paddingVertical="2dp"
        android:text="@string/date_widget_text3"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?attr/colorSecondary"
        tools:targetApi="26" />

</LinearLayout>